# Codec

./: CMakeLists.txt
include/Codec/: AudioFile.hpp  AudioFrameFormat.hpp  AudioFrameResizer.hpp  AudioMixer.hpp  CodecParameters.hpp  Constants.hpp  Decoder.hpp  Encoder.hpp  Filter.hpp  FilterGraph.hpp  Frame.hpp  MediaFile.hpp  MediaStream.hpp  Muxer.hpp  OpusEncoder.hpp  PTSSetter.hpp  Packet.hpp  Resampler.hpp  Sample.hpp  SodiumEncrypter.hpp
include/Codec/Audio/: AudioFrameFormat.hpp  AudioFrameResizer.hpp  AudioMixer.hpp  Decoder.hpp  Encoder.hpp  Frame.hpp  FrameFormat.hpp  FrameResizer.hpp  Mixer.hpp  Playlist.hpp  Resampler.hpp
scripts/: build_ffmpeg.sh
src/: AudioFile.cpp  AudioFrameFormat.cpp  AudioFrameResizer.cpp  AudioMixer.cpp  Decoder.cpp  Encoder.cpp  Filter.cpp  FilterGraph.cpp  Frame.cpp  MediaFile.cpp  MediaStream.cpp  Muxer.cpp  OpusEncoder.cpp  PTSSetter.cpp  Packet.cpp  Resampler.cpp  Sample.cpp  SodiumEncrypter.cpp
src/Audio/: AudioFrameFormat.cpp  AudioFrameResizer.cpp  AudioMixer.cpp  Decoder.cpp  Encoder.cpp  Frame.cpp  FrameFormat.cpp  FrameResizer.cpp  Mixer.cpp  Playlist.cpp  Resampler.cpp
src/Codec/: CodecParameters.hpp  Constants.hpp  Error.hpp  MediaFile.cpp  MediaFile.hpp  MediaStream.cpp  MediaStream.hpp  Muxer.cpp  Muxer.hpp  Packet.cpp  Packet.hpp  SodiumEncrypter.cpp  SodiumEncrypter.hpp
src/Codec/Audio/: AudioDecoder.cpp  AudioDecoder.hpp  AudioEncoder.cpp  AudioEncoder.hpp  Decoder.cpp  Decoder.hpp  Encoder.cpp  Encoder.hpp  Frame.cpp  Frame.hpp  FrameFormat.cpp  FrameFormat.hpp  FrameResizer.cpp  FrameResizer.hpp  Mixer.cpp  Mixer.hpp  Playlist.cpp  Playlist.hpp  Resampler.cpp  Resampler.hpp
test/: Main.cpp
